[package]
name = "ccc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["json"] }
rust_decimal = { version = "1.42.0", features = ["serde-float"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
